# pod-os-py-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
examples/: basic_usage.py  neural_memory.py
knowledge/: README.md
knowledge/docs/: Pod-OS-Communication-Prompts.md  Pod-OS-Intent-Field-Validation.md  Pod-OS-Message-Handling-Prompts.md  Pod-OS-Networking-Brief.md  Pod-OS-Neural-Memory-Event-Prompts.md  Pod-OS-Neural-Memory-Retrieval-Prompts.md
pod_os_client/: __init__.py  client.py  config.py  config_env.py  config_ini.py  errors.py  health.py
pod_os_client/connection/: __init__.py  client.py  pool.py  retry.py
pod_os_client/message/: __init__.py  constants.py  decoder.py  encoder.py  header.py  intents.py  responses.py  types.py  utils.py  validate.py
pod_os_client/readiness/: __init__.py  gate.py  health_probe.py
tests/: __init__.py  test_client_state.py  test_config.py  test_dead_connection.py  test_disconnect.py  test_encoder_batch.py  test_encoder_decoder.py  test_external_receiver.py  test_health.py  test_intents.py  test_keepalive.py  test_message_types.py  test_readiness.py  test_responses.py  test_utils.py  test_validate.py
